--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,9 @@
         <activity android:name=".MainActivity"
             android:theme="@style/AppTheme">
         </activity>
+        <activity android:name=".WebVideoActivity"
+            android:theme="@style/AppTheme">
+        </activity>
     </application>
 
 </manifest>
